# winscroll

./: .gitignore  LICENSE  README.md  install.sh  pyproject.toml  status.sh  uninstall.sh
.cursor/rules/: indicator-locked.mdc
kwin-script/winmiddle-focus/: metadata.json
kwin-script/winmiddle-focus/contents/code/: main.js
packaging/: PUBLISH.sh  install-data.sh
packaging/aur/winmiddle/: .SRCINFO  PKGBUILD  winmiddle.install
packaging/aur/winmiddle-git/: .SRCINFO  PKGBUILD  winmiddle.install
packaging/udev/: 99-winmiddle.rules
share/: firefox-policies.json  udev-winmiddle.rules.example  winmiddle-overlay.desktop
systemd/: winmiddle.service
winmiddle/: __init__.py  __main__.py  activation.py  autoscroll.py  config.py  cursor.py  daemon.py  devices.py  focus.py  modifiers.py  overlay.py  paste.py  scrollprobe.py  scrolltarget.py  setuputil.py  test_activation.py  test_autoscroll.py  test_scrolltarget.py
